wiki-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  name: wiki-svc
  labels:
    app: wiki
    service: wiki
spec:
  ports:
  - port: 8080
    name: wiki-port
    targetPort: 80
  selector:
    app: wiki
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: wiki
  labels:
    app: wiki
spec:
  replicas: 1
  selector:
    matchLabels:
      app: wiki
  template:
    metadata:
      labels:
        app: wiki
    spec:
      containers:
      - image: docker.io/seungjin/hugo-wiki
        imagePullPolicy: Always
        name: wiki
        ports:
        - containerPort: 80
          protocol: TCP
